<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MovieDetailFragment">

    <ImageView
        android:id="@+id/movie_backdrop"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/movie_wallpaper"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="128dp"
        android:layout_height="172dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toStartOf="@+id/movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_backdrop"
        tools:text="The Simpsons" />

    <TextView
        android:id="@+id/movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_title"
        tools:text="2022" />

    <TextView
        android:id="@+id/movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/movie_date"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        tools:text="Comedy" />

    <ImageView
        android:id="@+id/movie_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_date"
        app:srcCompat="@drawable/ic_top"
        android:contentDescription="@string/star_logo" />

    <TextView
        android:id="@+id/movie_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toEndOf="@+id/movie_top"
        app:layout_constraintTop_toBottomOf="@+id/movie_date" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_popularity"
        tools:text="@string/tools_overview" />

    <Button
        android:id="@+id/rateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_button"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_overview"
        style="?attr/materialButtonOutlinedStyle"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>